--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -5,10 +5,9 @@ sources:
       database: dbt-tutorial
       schema: stripe
       tables:
-        - name: payments
+        - name: payment
           loaded_at_field: _etl_loaded_at
           freshness:
             warn_after: {count: 12, period: hour}
             error_after: {count: 48, period: hour}
-        
-    
+                      loaded_at_field: _etl_loaded_at
