--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,14 +2,13 @@ version: 2
 
 models:
   - name: stg_customers
+  - description: One unique customer per row
     columns:
     - name: customer_id
+      description: Primary key for stg_customers
       tests:
         - unique
         - not_null
-
-
-
   - name: stg_orders
     columns:
       - name: order_id
@@ -17,8 +16,7 @@ models:
           - unique
           - not_null
       - name: status
-        tests:
-          - name: status
+        description: '{{ doc("order_status")}}'
         tests:
           - accepted_values:
               values:
@@ -27,3 +25,8 @@ models:
                 - return_pending
                 - returned
                 - placed
+      - name: customer_id
+        tests:
+          - relationships:
+            to: ref('stg_customers')
+            field: customer_id
