--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -6,7 +6,7 @@ sources:
       schema: stripe
       tables:
         - name: payment
-          loaded_at_field: _etl_loaded_at
+          loaded_at_field: _batched_at
           freshness:
             warn_after: {count: 12, period: hour}
             error_after: {count: 48, period: hour}
